[project]
name = "project-cipher"
version = "1.0.0"
description = "An intelligent, secure, natural-language Linux terminal assistant built with an event-driven Textual TUI and driven by local, open-source Large Language Models (LLMs). "
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
